Fix scroll when content too long

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -8,6 +8,7 @@ body {
   margin: 10px;
   border: 1px solid gray;
   background: #fff3e9;
+  overflow: auto;
 }
 
 #chatControls {
